force-app/main/default/objects/SAPAccount__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>