force-app/main/default/objects/SAPAccount__e/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>Annual Revenue</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>